--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,7 +32,7 @@ body,html{
 }
 
 .pimg3{
-    background-image: url(../images/bg.jpg);
+    background-image: url(bg.jpg);
     min-height: 400px;
 }
 
